# hexkudo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  io.github.herve4m.Hexkudo.Devel.yaml  meson.build
.github/files/: exceptions.json
.github/workflows/: build-lint.yml  image.yml  release.yml  verify.yml
build-aux/: README-RELEASE.md  build-run.sh  dist-vendor.sh
build-aux/flatpak/: io.github.herve4m.Hexkudo.yaml
data/: hexkudo.gresource.xml  io.github.herve4m.Hexkudo.desktop.in.in  io.github.herve4m.Hexkudo.gschema.xml.in  io.github.herve4m.Hexkudo.metainfo.xml.in.in  io.github.herve4m.Hexkudo.service.in  meson.build
data/icons/: meson.build
data/media/css/: style.css
data/ui/: done_dialog.blp  drawing_area.blp  game_view.blp  menu_button.blp  popover_number.blp  preferences_dialog.blp  print_dialog.blp  print_progress.blp  puzzle_list_item.blp  scores_dialog.blp  scores_dialog_item.blp  select_puzzle_view.blp  shortcuts_dialog.blp  start_view.blp  window.blp
help/: help.pot  meson.build
help/C/: basics.page  checkpoints.page  colors.page  errors.page  highlight-errors.page  highscores.page  index.page  print-blank-puzzles.page  print-inprogress-game.page  save-resume.page  solve.page  time.page
help/fr/: fr.po
po/: LINGUAS  POTFILES.in  README-BUILD.md  fr.po  hexkudo.pot  meson.build  vi.po
src/: application.rs  checkpoint.rs  cli_options.rs  config.rs  config.rs.in  draw.rs  game.rs  generator.rs  highscores.rs  input_errors.rs  main.rs  meson.build  player_input.rs  saver.rs  widgets.rs
src/generator/: diamond_and_map.rs  diamonds.rs  edges.rs  path.rs  puzzle_parse.rs  puzzles.rs  random_path.rs  vertexes.rs
src/generator/puzzles/: easy_classic_22.rs  easy_heart_24.rs  easy_square_22.rs  hard_classic_60.rs  hard_heart_58.rs  hard_square_60.rs  medium_classic_36.rs  medium_heart_45.rs  medium_square_38.rs
src/saver/: game.rs  highscores.rs
src/widgets/: done_dialog.rs  drawing_area.rs  game_view.rs  layout_manager.rs  menu_button.rs  popover_number.rs  preferences_dialog.rs  print_dialog.rs  print_job.rs  print_progress.rs  puzzle_list_item.rs  scores_dialog.rs  scores_dialog_item.rs  select_puzzle_view.rs  start_view.rs  window.rs
