[package]
name = "hexkudo"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.51", features = ["derive"] }
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
gtk = { version = "0.10.2", package = "gtk4", features = ["gnome_48"] }
strum_macros = "0.27.2"
async-channel = "2.5.0"
formatx = "0.2.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["clock"] }

[dependencies.adw]
package = "libadwaita"
version = "0.8.0"
features = ["v1_8"]
