help_files = [
  'basics.page',
  'checkpoints.page',
  'colors.page',
  'errors.page',
  'highlight-errors.page',
  'highscores.page',
  'index.page',
  'legal.xml',
  'print-blank-puzzles.page',
  'print-inprogress-game.page',
  'save-resume.page',
  'solve.page',
  'time.page',
]

help_media = [
  'figures/colors-callouts.png',
  'figures/colors.png',
  'figures/drag-down.png',
  'figures/drag-up.png',
  'figures/error_counter.png',
  'figures/errors.png',
  'figures/hexkudo.png',
  'figures/highscores.png',
  'figures/io.github.herve4m.Hexkudo.svg',
  'figures/open-menu-symbolic.svg',
  'figures/pref-warnings.png',
  'figures/select-number.png',
  'figures/time.png',
]

gnome.yelp(meson.project_name(),
        sources: help_files,
          media: help_media,
  symlink_media: true,
)
